--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "bulb-gestion",
   "version": "1.0.0",
-  "main": "script.js",
+  "main": "server.js",
+  "types": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
